jquery ui version up

--- a/html/components/component_input_text.html
+++ b/html/components/component_input_text.html
@@ -200,11 +200,16 @@
 							<div class="form">
 								<div class="label">예치금액 <span class="right">5억5000만원</span></div>
 								<div class="input-wrap input-placeholder">
-									<input type="tel" class="ar" placeholder="금액입력" aria-label="예치금액">
+									<input type="number" class="ar" placeholder="금액입력" aria-label="예치금액">
 									<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									<div class="visible-placeholder">원</div>
 								</div>
-								<p class="validate-text"></p>
+								<div class="shortcut-button-wrap">
+									<button type="button" class="btn-xsmall btn-outlined btn-round">+100만</button>
+									<button type="button" class="btn-xsmall btn-outlined btn-round">+500만</button>
+									<button type="button" class="btn-xsmall btn-outlined btn-round">+1천만</button>
+									<button type="button" class="btn-xsmall btn-outlined btn-round">+5천만</button>
+								</div>
 							</div>
 						</div>
 					</dd>
