--- a/html/components/component_datepicker.html
+++ b/html/components/component_datepicker.html
@@ -85,7 +85,17 @@
 			<h2>datepicker</h2>
 			<div class="guide-column-list">
 				<div class="input-wrap input-datepicker">
-					<button type="button" aria-label="대상기간 종료일" data-micromodal-trigger="modal-datepicker">2024-10</button>
+					<button type="button" aria-label="날짜 선택" data-micromodal-trigger="modal-datepicker">2024-10</button>
+				</div>
+			</div>
+		</div>
+		<hr>
+
+		<div class="ui-guide-section">
+			<h2>datepicker</h2>
+			<div class="guide-column-list">
+				<div class="input-wrap input-datepicker">
+					<input type="button" aria-label="날짜 선택" class="selector">
 				</div>
 			</div>
 		</div>
@@ -451,6 +461,37 @@
 				nextEl: '.calendar-wrap .swiper-button-next',
 				prevEl: '.calendar-wrap .swiper-button-prev',
 			},
+		});
+	</script>
+	<script>
+		// $(".selector").datepicker({
+		// 	showAnim: '',
+
+		// 	//show animation
+		// 	beforeShow: function() {
+		// 		console.log($(this).datepicker("widget"))
+		// 		$(this).datepicker("widget").closest('.micromodal-slide').addClass("is-open").attr({
+		// 			'aria-hidden': 'false'
+		// 		});
+		// 	},
+		// 	// close animation
+		// 	onClose: function() {
+		// 		$(this).datepicker("widget").closest('.micromodal-slide').removeClass("is-open").attr({
+		// 			'aria-hidden': 'true'
+		// 		});
+		// 	}
+		// }).datepicker(
+		// 	//Before init
+		// 	$(this).datepicker("widget").wrap(`
+		//         <div class="micromodal-slide micromodal-slide-bottom modal" id="modal-datepicker-year" aria-hidden="true">
+		//             <div class="modal__overlay" tabindex="-1" data-micromodal-close="">
+		//                 <div class="modal__container" role="dialog" aria-modal="true">
+		//     `)
+		// );
+		$(".selector").datepicker({
+			showOptions: {
+				direction: "down"
+			}
 		});
 	</script>
 </body>
